Radius Menus Left test

--- a/index.html
+++ b/index.html
@@ -11,21 +11,23 @@
 <body>
     <nav>
         <div class="nav-content">
-            <div class="toggle-btn">
+            <div class="toggle-btn1">
                     <img id="icon-menu" src="./adapngw.png" alt="">
             </div>
-            <span>
+            <div class="toggle-btn2">
+            <span style="--i:1;">
                 <a href="#"><i class='bx bxs-home' ></i></a>
             </span>
-            <span>
+            <span style="--i:2;">
                 <a href="#"><i class='bx bxs-hot'></i></a>
             </span>
-            <span>
+            <span style="--i:3">
                 <a href="#"><i class='bx bxs-phone'></i></a>
             </span>
-            <span>
+            <span style="--i:4;">
                 <a href="#"><i class='bx bxs-map'></i></a>
             </span>
+            </div>
         </div>
     </nav>
 </body>
