Radius Menu Aligne Left

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="toggle-btn1">
                     <img id="icon-menu" src="./adapngw.png" alt="">
             </div>
-            <div class="toggle-btn2">
+            <div class="toggle-btn">
             <span style="--i:1;">
                 <a href="#"><i class='bx bxs-home' ></i></a>
             </span>
