Menu Radius Circle Ready Function

--- a/index.html
+++ b/index.html
@@ -16,19 +16,23 @@
             </div>
             <div class="toggle-btn">
             <span style="--i:1;">
-                <a href="#"><i class='bx bxs-home' ></i></a>
+                <a href="#"><i class='bx bxs-phone' ></i></a>
             </span>
             <span style="--i:2;">
-                <a href="#"><i class='bx bxs-hot'></i></a>
-            </span>
-            <span style="--i:3">
-                <a href="#"><i class='bx bxs-phone'></i></a>
-            </span>
-            <span style="--i:4;">
                 <a href="#"><i class='bx bxs-map'></i></a>
             </span>
+            <span style="--i:3">
+                <a href="#"><i class='bx bxs-hot'></i></a>
+            </span>
+            <span style="--i:4;">
+                <a href="#"><i class='bx bxs-home'></i></a>
+            </span>
+            </div>
+            <div class="menu-radius">
             </div>
         </div>
     </nav>
+
+    <script src="script.js"></script>
 </body>
 </html>
