Animation radius menu On

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <nav>
         <div class="nav-content">
             <div class="toggle-btn1">
-                    <img id="icon-menu" src="./adapngw.png" alt="">
+                    <img id="iconMenu" src="./adapngw.png" alt="">
+                    <div id="menuRadius">
+                    </div>
             </div>
             <div class="toggle-btn">
             <span style="--i:1;">
@@ -27,8 +29,6 @@
             <span style="--i:4;">
                 <a href="#"><i class='bx bxs-home'></i></a>
             </span>
-            </div>
-            <div class="menu-radius">
             </div>
         </div>
     </nav>
