Align Menu Radius Itens

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
             <div class="toggle-btn">
             <span style="--i:1;">
-                <a href="#"><i class='bx bxs-phone' ></i></a>
+                <a href="https://sharkvalenccio.github.io/DevLinks/" target="_blank"><i class='bx bxs-phone' ></i></a>
             </span>
             <span style="--i:2;">
                 <a href="#"><i class='bx bxs-map'></i></a>
